@@ -1,3 +1,8 @@
+modMonitor-2.7.0-beta
+================================
+- Added fenom support
+
+
 modMonitor-2.6.7-beta
 ================================
 - Added plugin events OnModmonitorRequestBeforeSave and OnModmonitorRequestSave
